<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradienback"
    tools:context=".MyMoviesDetail">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/posterFilm"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:layout_marginStart="9dp"
            android:layout_marginBottom="10dp"
            android:src="@color/colorPrimary"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            android:contentDescription="@string/picdetail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginLeft="26dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/keepfaith"
            android:paddingTop="2dp"
            android:text="@string/title"
            android:textColor="#ecfc03"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/txt_judul"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/posterFilm" />

        <TextView
            android:id="@+id/txt_judul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/keepfaith"
            android:text="@string/title"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/keepfaith"
            android:paddingTop="25dp"
            android:text="@string/status"
            android:textColor="#ecfc03"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/statusFilm"
            app:layout_constraintStart_toStartOf="@+id/txt_judul"
            app:layout_constraintTop_toBottomOf="@+id/txt_judul" />

        <TextView
            android:id="@+id/statusFilm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/keepfaith"
            android:text="@string/statusReleased"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="33dp"
            android:fontFamily="@font/keepfaith"
            android:paddingTop="25dp"
            android:text="@string/skorPengunjung"
            android:textColor="#ecfc03"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/genre"
            app:layout_constraintStart_toStartOf="@+id/statusFilm"
            app:layout_constraintTop_toBottomOf="@+id/statusFilm" />

        <TextView
            android:id="@+id/skorPengunjung"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/keepfaith"
            android:text="@string/skorDetail"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />


        <TextView
            android:id="@+id/genre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:background="@drawable/gradienback"
            android:fontFamily="@font/keepfaith"
            android:padding="15dp"
            android:text="@string/genre"
            android:textAlignment="center"
            android:textColor="#ecfc03"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="3"
            android:paddingTop="15dp"
            android:src="@drawable/timer"
            android:textAlignment="center"
            android:tint="#ecfc03"
            app:layout_constraintEnd_toStartOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            android:contentDescription="@string/logoruntime" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="11dp"
            android:layout_marginRight="11dp"
            android:ellipsize="end"
            android:maxLines="3"
            android:paddingTop="15dp"
            android:src="@drawable/language"
            android:textAlignment="center"
            android:tint="#ecfc03"
            app:layout_constraintBottom_toTopOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/genre"
            android:contentDescription="@string/logolanguages" />


        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/keepfaith"
            android:paddingTop="5dp"
            android:text="@string/waktuTayang"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
            app:layout_constraintEnd_toStartOf="@+id/textView5"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="11dp"
            android:layout_marginRight="11dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/keepfaith"
            android:paddingTop="5dp"
            android:text="@string/bahasaFilm"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/bahasaFilm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />


        <TextView
            android:id="@+id/durasiFilm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/keepfaith"
            android:text="@string/_1h_0m"
            android:textAlignment="center"
            android:textColor="#ecfc03"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/bahasaFilm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/bahasaFilm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="11dp"
            android:layout_marginRight="11dp"
            android:layout_marginBottom="25dp"
            android:fontFamily="@font/keepfaith"
            android:text="@string/english"
            android:textAlignment="center"
            android:textColor="#ecfc03"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/durasiFilm"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />


        <TextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/gradienback"
            android:fontFamily="@font/keepfaith"
            android:padding="15dp"
            android:text="@string/overview"
            android:textAlignment="center"
            android:textColor="#ecfc03"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/overview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bahasaFilm" />

        <TextView
            android:id="@+id/overview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/keepfaith"
            android:padding="20dp"
            android:text="@string/deskdetail"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>